--- a/package.json
+++ b/package.json
@@ -25,11 +25,8 @@
     "@babel/core": "^7.16.12",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
-    "@graphql-tools/schema": "^8.3.1",
     "apollo-server-express": "^2.25.3",
     "dotenv": "^15.0.0",
-    "express": "^4.17.2",
-    "graphql": "^15.5.0",
-    "mongoose": "^6.1.10"
+    "express": "^4.17.2"
   }
 }
