--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "db": "babel-node ./db/scripts/seed.js",
-    "start": "nodemon ./index.js --exec babel-node",
+    "start": "nodemon app.js",
     "stop": "node stop hello_aws",
     "build": "echo 'Building...'"
   },
@@ -27,6 +27,10 @@
     "@babel/preset-env": "^7.16.11",
     "apollo-server-express": "^2.25.3",
     "dotenv": "^15.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "pg-promise": "^10.11.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
