--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
     "apollo-server-express": "^2.25.3",
+    "cors": "^2.8.5",
     "dotenv": "^15.0.0",
     "express": "^4.17.2",
     "pg-promise": "^10.11.1"
